Stupid z-index bug

--- a/pizzalair/static/pizzalair/css/style.css
+++ b/pizzalair/static/pizzalair/css/style.css
@@ -37,6 +37,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 100;
 }
     header .page {
         display: flex;
